Wed Sep 25 08:50:40 2002  Owen Taylor  <otaylor@redhat.com>

	Patch from Eric Warmenhoven, #94123

        * gdk/gdkmouse-fb.c: Add scrolling support for 
	imps2 mice.

	* gdk/linux-fb/gdkimage-fb.c: Fix compilation error
	in last gdkimage-fb.c commit.

Wed Sep 25 00:16:53 2002  Manish Singh  <yosh@gimp.org>

	* gdk/Makefile.am gdk/x11/Makefile.am: add -DG_DISABLE_DEPRECATED
	and -DGDK_PIXBUF_DISABLE_DEPRECATED to compile flags

	* gdk/gdkcolor.c gdk/gdkdisplay.c gdk/gdkdraw.c gdk/gdkevents.c
	gdk/gdkgc.c gdk/gdkimage.c gdk/gdkpango.c gdk/gdkpixbuf-render.c
	gdk/gdkpixmap.c gdk/gdkrgb.c gdk/gdkwindow.c gdk/linux-fb/gdkdnd-fb.c 
	gdk/linux-fb/gdkfont-fb.c gdk/win32/gdkdnd-win32.c
	gdk/win32/gdkfont-win32.c gdk/x11/gdkdisplay-x11.c gdk/x11/gdkdnd-x11.c
	gdk/x11/gdkdrawable-x11.c gdk/x11/gdkevents-x11.c gdk/x11/gdkfont-x11.c
	gdk/x11/gdkgc-x11.c gdk/x11/gdkgeometry-x11.c gdk/x11/gdkim-x11.c
	gdk/x11/gdkinput-x11.c gdk/x11/gdkkeys-x11.c gdk/x11/gdkscreen-x11.c
	gdk/x11/gdkwindow-x11.c: Deprecation cleanup, mostly changing
	gdk_foo_{ref,unref} to g_object equivalents.

Tue Sep 24 23:54:20 2002  Manish Singh  <yosh@gimp.org>

	* gtk/gtkfilesel.c: check if last_selected is valid before doing
	a strcmp on it, which may happen if selections happen programmatically
	instead of through the UI (#86566)

Tue Sep 24 23:33:48 2002  Manish Singh  <yosh@gimp.org>

        * gtk/gtkfilesel.c: preserve ordering from gtk_tree_selection_foreach
	when returning filenames for gtk_file_selection_get_selections
	(#86567)

	* gtk/gtkclipboard.c: GtkClipboard struct should have a GObject
	in it, not a GObjectClass

Tue Sep 24 18:18:36 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkclipboard.[ch]: Make a GObject (#75970, James
	Henstridge)

Tue Sep 24 19:45:55 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkwindow-x11.c (gdk_window_impl_x11_get_colormap): 
	Look up the visual as well as the colormap, since calling
	gdk_drawable_get_visual() causes infinite recursion.
